src/defaultV2-theme/blocks/sd-dropdown.scss
.sv-dropdown_select-wrapper {
  position: relative;
}

.sv-dropdown_select-wrapper use {
  fill: $foreground-light;
}

.sd-dropdown {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-inline-end: calcSize(6); //padding-right
  padding-inline-start: calcSize(2); //padding-left

  opacity: 1;
  display: flex;
  justify-content: space-between;
}

.sd-dropdown[disabled] {
  pointer-events: none;
}

.sd-dropdown--empty:not(.sd-input--disabled),
.sd-dropdown--empty:not(.sd-input--disabled) .sd-dropdown__value {
  color: $foreground-light;
}

.sd-dropdown__input-field-component {
  height: auto;
}

.sd-dropdown option {
  color: $foreground;
  font-family: var(--font-family, $font-family);
  font-size: calcFontSize(1);
}

.sd-dropdown__value {
  width: 100%;
  min-height: calcSize(3);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: calcLineHeight(1.5);
  font-family: $font-editorfont-family;
  font-weight: $font-editorfont-weight;
  color: $font-editorfont-color;
  font-size: $font-editorfont-size;

  position: relative;
}

.sd-dropdown_clean-button {
  padding: 0 calcSize(1);
  margin: auto 0;
}

.sd-dropdown_chevron-button {
  position: absolute;
  inset-inline-end: calcSize(1.5);
  inset-block-start: calcSize(1.5);
}

.sd-dropdown_clean-button-svg {
  width: calcSize(3);
  height: calcSize(3);
}

.sd-input.sd-dropdown:focus-within {
  box-shadow: 0 0 0 2px $primary;
}

.sd-input.sd-dropdown:focus-within {
  .sd-dropdown__filter-string-input {
    z-index: 2000;
  }
}

.sd-dropdown__filter-string-input {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  max-width: 100%;
  border: none;
  outline: none;
  padding: 0;
  font-family: $font-editorfont-family;
  font-weight: $font-editorfont-weight;
  color: $font-editorfont-color;
  font-size: $font-editorfont-size;
  line-height: calcLineHeight(1.5);
  background-color: transparent;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
  appearance: none;
  height: 100%;
}

.sd-dropdown--empty:not(.sd-input--disabled) .sd-dropdown__filter-string-input::placeholder {
  color: $foreground-light;
}

.sd-dropdown__filter-string-input::placeholder {
  font-family: var(--font-family, $font-family);
  font-size: calcFontSize(1);
  color: $foreground;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
  line-height: calcLineHeight(1.5);
  appearance: none;
}

.sd-dropdown__hint-prefix {
  color: $foreground-light;

  span {
    white-space: pre;
  }
}

.sd-dropdown__hint-suffix {
  display: flex;
  color: $foreground-light;

  span {
    white-space: pre;
  }
}

[dir="rtl"],
[style*="direction:rtl"],
[style*="direction: rtl"] {
  .sd-dropdown {
    background-position: left calcSize(1.5) top 50%, 0 0;
  }
}

